# deer-agent

./: .gitignore  README.md  extensions_config.json  pyproject.toml
agents/oncall/: SOUL.md
apps/oncall/: cli.py
apps/shared/: subagent_registry.py
doc/oncall-analysis/: product_analysis.md  product_requirements.md
harness/: pyproject.toml
harness/deerflow/subagents/: __init__.py
harness/deerflow_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skills/custom/oncall-diagnosis/: SKILL.md
skills/custom/oncall-diagnosis/references/: template_map.json
