[project]
name = "deer-agents"
version = "0.1.0"
description = "Multi-agent platform built on forked DeerFlow harness"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.workspace]
members = ["harness", "."]

[tool.uv.sources]
deerflow-harness = { workspace = true }

[project.scripts]
oncall = "apps.oncall.cli:main"
